--- a/src/assets/globals.css
+++ b/src/assets/globals.css
@@ -3,10 +3,10 @@
 *,
 *::before,
 *::after {
-box-sizing: border-box;
-margin: 0;
-position: relative;
-font-weight: normal;
+  box-sizing: border-box;
+  margin: 0;
+  position: relative;
+  font-weight: normal;
 }
 
 :root {
@@ -15,32 +15,37 @@ font-weight: normal;
   --light-color: #8f8ebf;
   --dark-color-1: #2e4159;
   --dark-color-2: #262626;
+  --red-color-1: #d34646;
 }
 
 body {
-min-height: 100vh;
-color: var(--color-text);
-background: var(--color-background);
-transition: color 0.5s, background-color 0.5s;
-line-height: 1.6;
-font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
-    Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
-font-size: 15px;
-text-rendering: optimizeLegibility;
--webkit-font-smoothing: antialiased;
--moz-osx-font-smoothing: grayscale;
+  min-height: 100vh;
+  color: var(--color-text);
+  background: var(--color-background);
+  transition: color 0.5s, background-color 0.5s;
+  line-height: 1.6;
+  font-family: Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+  font-size: 15px;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+.active {
+  opacity: 1 !important;
+  z-index: 1 !important;
+}
+@font-face {
+  font-family: "Open Sans";
+  src: url("../../fonts/OpenSans.ttf");
 }
 
 @font-face {
-    font-family: 'Open Sans';
-    src: url("../../fonts/OpenSans.ttf")
-}
-
-@font-face {
-    font-family: 'Uni Sans';
-    src: url("../../fonts/UniSans.otf")
+  font-family: "Uni Sans";
+  src: url("../../fonts/UniSans.otf");
 }
 
 .icon-big {
-    font-size:20px;
+  font-size: 20px;
 }
